--- a/bhoma/apps/webapp/templates/auth/login.html
+++ b/bhoma/apps/webapp/templates/auth/login.html
@@ -8,7 +8,7 @@
 <div id="loginblock">
     <h4>Please sign in</h4>
     <form method="post" action=".">
-        {# uncomment in django 1.2 {% csrf_token %} #}
+        {% csrf_token %} 
         <table>
             <tr><td style="text-align:right;">{{ form.username.label_tag }}</td><td>{{ form.username }}</td></tr>
             <tr><td style="text-align:right;">{{ form.password.label_tag }}</td><td>{{ form.password }}</td></tr>
